# blink

./: .gitattributes  .gitignore  README.md  blink_config.json  package-lock.json  pubspec.yaml
.github/workflows/: windows-build.yml
Desktop/: MemcacheNotes.txt  agarwal.sqlite
Desktop/blink/: Dockerfile  bun.lockb  package.json
Desktop/blink/src-tauri/: Cargo.toml  agarwal.sqlite  build.rs  tauri.conf.json
Desktop/blink/src-tauri/.github/workflows/: build.yml
Desktop/blink/src-tauri/src/: main.rs
Desktop/blink/src-tauri/src/db/: init.rs
Desktop/blink/src-tauri/src/detection/: blink_detection.rs  mod.rs
Flutter_CP/: LICENSE
Flutter_CP/android/: local.properties
Flutter_CP/blink functionality/: blink2.py
Flutter_CP/blink_rust_imp/: Cargo.toml
Flutter_CP/linux/: CMakeLists.txt
Python/: blink.py  blinks_per_minute.db  requirements.txt
android/app/: build.gradle
application/: README.md  blink.py  package-lock.json  package.json  requirements.txt  vite.config.js
application/python-3.10.4-embed-amd64/: _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _decimal.pyd  _elementtree.pyd  _hashlib.pyd  _lzma.pyd  _msi.pyd  _multiprocessing.pyd  _overlapped.pyd  _queue.pyd  _socket.pyd  _sqlite3.pyd  _ssl.pyd  _uuid.pyd  _zoneinfo.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd  winsound.pyd
application/scripts/: build_py.cjs  (+2 more)
blink_rust_imp/: Cargo.toml
lib/: custom_bottom_nav_bar.dart  main.dart
linux/: my_application.cc
server/: blink.py  blink.spec  config_manager.py  requirements.txt
test/: widget_test.dart
web/: index.html
windows/: CMakeLists.txt
(+32 files in other folders)
