[package]
name = "blink"
version = "0.1.0"
description = "Blink Detection app made by Loyola Engineering students [LICET] for agarwal hospital"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "blink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
opencv = "0.93.5" 
chrono = "0.4"
rusqlite = { version = "0.29.0"}
r2d2 = "0.8"
serde_json = "1.0"
r2d2_sqlite = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
